@@ -29,4 +29,15 @@ typedef int socklen_t;
 
 # endif /* WIN32 */
 
+// In the long run, this should be part of libport, but I don't know
+// where actually :( Should it be libport/sys/types.hh?  Or unistd.hh?
+// What standard header should do that?
+
+#ifdef WIN32
+// On windows, file descriptors are defined as u_int (i.e., unsigned int).
+# define LIBPORT_FD_SET(N, P) FD_SET(static_cast<u_int>(N), P)
+#else
+# define LIBPORT_FD_SET(N, P) FD_SET(N, P)
+#endif
+
 #endif /* !LIBPORT_NETWORK_H_ */
