@@ -1,3 +1,8 @@
+2007-01-23  Akim Demaille  <akim@lrde.epita.fr>
+
+	LIBPORT_FD_SET
+	* libport/network.h: Define it here.
+
 2007-01-21  Akim Demaille  <akim@lrde.epita.fr>
 
 	Windows portability
